--- a/app/src/main/res/layout/fragment_trip_screen.xml
+++ b/app/src/main/res/layout/fragment_trip_screen.xml
@@ -41,6 +41,14 @@
             android:layout_marginStart="1dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="1dp"
+            app:tabInlineLabel="true"
+            app:tabIndicatorColor="@color/bottom_menu_item_selected"
+            app:tabIconTint="@color/tab_layout_indicator_selector"
+            app:tabIndicatorHeight="@dimen/_2sdp"
+            app:tabSelectedTextColor="@color/bottom_menu_item_selected"
+            app:tabIndicatorFullWidth="false"
+            android:background="@android:color/transparent"
+            app:itemRippleColor="@android:color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tripTitle"
