--- a/app/src/main/res/layout/top_destinations_item.xml
+++ b/app/src/main/res/layout/top_destinations_item.xml
@@ -35,8 +35,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:downloadImageUrl="@{topDestinationItem.images[0].url}"
+                    android:foreground="@drawable/recyclerview_items_image_background_stroke"
                     android:scaleType="centerCrop"
-                    android:src="@drawable/top_destination_test_images"
+                    tools:src="@drawable/top_destination_test_images"
                     tools:ignore="ContentDescription" />
 
                 <TextView
