--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="bottom_menu_item_selected">#FF4760</color>
+    <color name="tab_layout_unselect_color">#C2C5D6</color>
     <color name="home_title_color">#FCFCFD</color>
     <color name="search_title_color">#292C3D</color>
     <color name="search_bar_hint_color">#52577A</color>
