--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,4 +36,9 @@
         <item name="android:textSize">@dimen/_20ssp</item>
     </style>
 
+    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="textAllCaps">false</item>
+        <item name="android:foreground">@android:color/transparent</item>
+    </style>
+
 </resources>
