--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,137 +7,121 @@
 
     </data>
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".view.HomeListFragment">
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="135dp"
-        tools:layout_editor_absoluteY="1dp">
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".presentation.search.SearchFragment">
-
-
-        <TextView
-            android:id="@+id/searchTitle"
-            android:text="@string/search"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            style="@style/fragments_title_style" />
-
-
-        <EditText
-            android:id="@+id/searchBar"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+        <androidx.constraintlayout.motion.widget.MotionLayout
+            android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_37sdp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="@dimen/_15sdp"
-            android:layout_marginEnd="16dp"
-            android:descendantFocusability="blocksDescendants"
-            android:ellipsize="end"
-            android:textColorHint="@color/car_ui_text_color_hint"
-            android:fontFamily="@font/source_sans_pro"
-            android:textSize="@dimen/_13ssp"
-            android:hint="@string/where_next"
-            android:imeOptions="actionSearch"
-            app:endIconTint="@color/search_bar_icon_color"
-            android:background="@drawable/search_bar_background"
-            android:drawableEnd="@drawable/ic_search_bar_icon"
-            android:drawablePadding="@dimen/_10sdp"
-            android:padding="@dimen/_10sdp"
-            app:endIconDrawable="@drawable/ic_search_bar_icon"
-            app:endIconMode="custom"
-            android:maxLines="1"
-            android:inputType="text"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchTitle"
-            android:autofillHints="" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/topDestinationRV"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_160sdp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4"
-            tools:listitem="@layout/top_destinations_item" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="10dp"
-            android:fontFamily="@font/source_sans_pro"
-            android:text="@string/top_destinations"
-            android:textColor="@color/search_title_color"
-            android:textFontWeight="700"
-            android:textSize="@dimen/_20ssp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchBar"
-            tools:ignore="UnusedAttribute" />
+            app:layoutDescription="@xml/fragment_search_xml_constraintlayout_scene"
+            tools:context=".presentation.search.SearchFragment">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/_12sdp"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:fontFamily="@font/source_sans_pro"
-            android:text="@string/nearby_attractions"
-            android:textAllCaps="true"
-            android:textColor="@color/search_title_color"
-            android:textFontWeight="600"
-            android:textSize="@dimen/_20ssp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/topDestinationRV"
-            tools:ignore="UnusedAttribute" />
+            <TextView
+                android:id="@+id/searchTitle"
+                style="@style/fragments_title_style"
+                android:text="@string/search"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/ghostImage"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/_60sdp"
-            android:background="@android:color/transparent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.476"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nearbyRecyclerview"
-            tools:ignore="ContentDescription" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/nearbyRecyclerview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/_12sdp"
-            android:layout_marginBottom="1dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
-            app:layout_constraintVertical_bias="0.0"
-            tools:layout_editor_absoluteX="0dp"
-            tools:listitem="@layout/search_nearby_item" />
+            <EditText
+                android:id="@+id/searchBar"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_37sdp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginEnd="16dp"
+                android:autofillHints=""
+                android:background="@drawable/search_bar_background"
+                android:descendantFocusability="blocksDescendants"
+                android:drawableEnd="@drawable/ic_search_bar_icon"
+                android:drawablePadding="@dimen/_10sdp"
+                android:ellipsize="end"
+                android:fontFamily="@font/source_sans_pro"
+                android:hint="@string/where_next"
+                android:imeOptions="actionSearch"
+                android:inputType="text"
+                android:maxLines="1"
+                android:padding="@dimen/_10sdp"
+                android:textColorHint="@color/car_ui_text_color_hint"
+                android:textSize="@dimen/_13ssp"
+                app:endIconDrawable="@drawable/ic_search_bar_icon"
+                app:endIconMode="custom"
+                app:endIconTint="@color/search_bar_icon_color"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchTitle" />
 
-        <ProgressBar
-            android:id="@+id/searchLoading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/topDestinationRV"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_160sdp"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView4"
+                tools:listitem="@layout/top_destinations_item" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="10dp"
+                android:fontFamily="@font/source_sans_pro"
+                android:text="@string/top_destinations"
+                android:textColor="@color/search_title_color"
+                android:textFontWeight="700"
+                android:textSize="@dimen/_20ssp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/searchBar"
+                tools:ignore="UnusedAttribute" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_12sdp"
+                android:fontFamily="@font/source_sans_pro"
+                android:text="@string/nearby_attractions"
+                android:textAllCaps="true"
+                android:textColor="@color/search_title_color"
+                android:textFontWeight="600"
+                android:textSize="@dimen/_20ssp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/topDestinationRV"
+                tools:ignore="UnusedAttribute" />
+
+            <ImageView
+                android:id="@+id/ghostImage"
+                android:layout_width="wrap_content"
+                android:layout_height="@dimen/_60sdp"
+                android:background="@android:color/transparent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.476"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/nearbyRecyclerview"
+                tools:ignore="ContentDescription" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/nearbyRecyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/_12sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textView5"
+                tools:listitem="@layout/search_nearby_item" />
+
+            <ProgressBar
+                android:id="@+id/searchLoading"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
