--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="search_error_text_color">#990014</color>
     <color name="search_error_info_text_color">#FF4760</color>
     <color name="ic_logo">#fff</color>
+    <color name="get_started_login_background">#E9EFFF</color>
 
 
 
