--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,9 +36,37 @@
         <item name="android:textSize">@dimen/_20ssp</item>
     </style>
 
-    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
+    <style name="MyCustomTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse">
         <item name="textAllCaps">false</item>
         <item name="android:foreground">@android:color/transparent</item>
+    </style>
+
+    <style name="getStartedTitle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">95dp</item>
+        <item name="android:layout_marginTop">91dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginEnd">95dp</item>
+        <item name="android:fontFamily">@font/source_sans_pro_bold</item>
+        <item name="android:lineHeight" tools:ignore="NewApi">38sp</item>
+        <item name="android:textColor">#FFCD93</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
+        <item name="android:textSize">32sp</item>
+    </style>
+
+    <style name="getStartedButtonStyle" parent="Widget.MaterialComponents.Button.OutlinedButton">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+        <item name="android:layout_marginStart">103dp</item>
+        <item name="android:layout_marginEnd">114dp</item>
+        <item name="android:layout_marginBottom">52dp</item>
+        <item name="android:backgroundTint">#FFCD93</item>
+        <item name="android:fontFamily">@font/source_sans_pro_bold</item>
+        <item name="android:lineHeight" tools:ignore="NewApi">16sp</item>
+        <item name="android:textColor">#404756</item>
+        <item name="android:textFontWeight" tools:ignore="NewApi">700</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
